--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=7.4.0",
         "barryvdh/laravel-cors": "^0.11.2",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^6.0",
+        "laravel/helpers": "^1.6",
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
