--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,17 @@
     "type": "project",
     "require": {
         "php": ">=7.4.0",
-        "barryvdh/laravel-cors": "^0.11.2",
+        "fruitcake/laravel-cors": "^1.0",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.0",
+        "laravel/framework": "^7.0",
         "laravel/helpers": "^1.6",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "^2.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
         "classmap": [
