--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=7.4.0",
         "fruitcake/laravel-cors": "^1.0",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "^7.0",
+        "laravel/framework": "^8.0",
         "laravel/helpers": "^1.6",
         "laravel/tinker": "^2.0"
     },
@@ -16,15 +16,13 @@
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ],
         "psr-4": {
-            "ThekRe\\": "app/"
+            "ThekRe\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
         }
     },
     "autoload-dev": {
