--- a/composer.json
+++ b/composer.json
@@ -5,16 +5,17 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=8.0.0",
-        "laravel/framework": "^9.0",
+        "php": ">=8.2.0",
+        "laravel/framework": "^10.0",
         "laravel/helpers": "^1.6",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^v2.8.2"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^10.0",
+        "nunomaduro/collision": "^7.0"
     },
     "autoload": {
         "psr-4": {
