--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,14 @@
     "type": "project",
     "require": {
         "php": ">=8.2.0",
+        "fakerphp/faker": "^1.23",
         "laravel/framework": "^10.0",
         "laravel/helpers": "^1.6",
-        "laravel/tinker": "^v2.8.2"
+        "laravel/tinker": "^v2.8.2",
+        "laravel/ui": "^4.2"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
-        "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "^10.0",
         "nunomaduro/collision": "^7.0"
