--- a/env_testumgebung/.env
+++ b/env_testumgebung/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:OXiQSLCrUXYKg8PH2U7ulTM8cg8e5POG+H+wX4hXK4A=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://server1120.cs.technik.fhnw.ch/themenkisten/
+APP_URL=http://server1120.cs.technik.fhnw.ch
 
 UNIQUE_SERVER_URL=themenkisten/
 
