--- a/env_testumgebung/.env
+++ b/env_testumgebung/.env
@@ -21,6 +21,7 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
 EMAILS_FROM_NAME='Campusbibliothek Brugg-Windisch TESTUMGEBUNG'
+MAIL_USERNAME="bibliothek.windisch@fhnw.ch"
 MAIL_DRIVER=smtp
 MAIL_HOST=lmailer.ict.fhnw.ch
 MAIL_PORT=25
