--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 
 test:
   stage: test
-  image: php:8.2
+  image: php:8.2.4-apache
   script:
     - phpunit --bootstrap vendor/autoload.php tests/Unit/UserControllerTest.php
     - phpunit --bootstrap vendor/autoload.php tests/Unit/AdminControllerTest.php
