--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,10 +2,10 @@ stages:
   - test
 
 variables:
-  MYSQL_ROOT_PASSWORD: ${DATABASE_ROOT_PASSWORD}
-  MYSQL_DATABASE: ${DATABASE}
-  MYSQL_USER: ${DATABASE_USERNAME}
-  MYSQL_PASSWORD: ${DATABASE_PASSWORD}
+  MYSQL_ROOT_PASSWORD: "$DATABASE_ROOT_PASSWORD"
+  MYSQL_DATABASE: "$DATABASE"
+  MYSQL_USER: "$DATABASE_USERNAME"
+  MYSQL_PASSWORD: "$DATABASE_PASSWORD"
 
 services:
   - name: mysql:8.0
@@ -15,15 +15,10 @@ test:
   stage: test
   image: php:8.2.4-apache
   before_script:
-    - apt-get update && apt-get install -y \
-      libzip-dev \
-      zip \
-      curl
+    - apt-get update && apt-get install -y libzip-dev zip curl
     - docker-php-ext-install pdo_mysql zip
-    - docker-php-ext-enable pdo_mysql
     - cp .env.example .env
     - php artisan key:generate
-    # You might need additional setup steps here
   script:
     - composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
     - php artisan test
