--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ test:
   before_script:
     - apt-get update && apt-get install -y libzip-dev zip curl
     - docker-php-ext-install pdo_mysql zip
-    - cp .env .env
+    - cp .env.cicd .env
     - php artisan key:generate
   script:
     - composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
