testing around with cicd

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,10 @@ test:
     - apt-get update && apt-get install -y libzip-dev zip curl
     - docker-php-ext-install pdo_mysql zip
     - cp .env.cicd .env
+    - echo $MYSQL_ROOT_PASSWORD"
+    - echo $MYSQL_DATABASE"
+    - echo $MYSQL_USER"
+    - echo $MYSQL_PASSWORD"
     - apt-get update && apt-get install -y wget  # Install wget
     - wget -O composer-setup.php https://getcomposer.org/installer  # Download Composer installer
     - php composer-setup.php --install-dir=/usr/local/bin --filename=composer  # Install Composer
