--- a/.env.cicd
+++ b/.env.cicd
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:OXiQSLCrUXYKg8PH2U7ulTM8cg8e5POG+H+wX4hXK4A=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://127.0.0.1
+APP_URL=localhost
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -27,7 +27,7 @@ MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
 
 DATABASE_DRIVER=mysql
-DATABASE_HOST=mysql
+DATABASE_HOST=localhost
 DATABASE_PORT=3306
 DATABASE=db_ci
 DATABASE_USERNAME=username_ci
