--- a/.env.cicd
+++ b/.env.cicd
@@ -27,7 +27,7 @@ MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
 
 DATABASE_DRIVER=mysql
-DATABASE_HOST=localhost
+DATABASE_HOST=db_ci
 DATABASE_PORT=3306
 DATABASE=db_ci
 DATABASE_USERNAME=username_ci
