--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ test:
     - apt-get update && apt-get install -y libzip-dev zip curl default-mysql-client
     - docker-php-ext-install pdo_mysql zip
     - cp .env.cicd .env
-    - mysql -h db_ci -u username_ci -p password password_ci < database/thekre_empty.sql
+    - mysql -h db_ci -u username_ci -p password_ci < database/thekre_empty.sql
     - apt-get update && apt-get install -y wget  # Install wget
     - wget -O composer-setup.php https://getcomposer.org/installer  # Download Composer installer
     - php composer-setup.php --install-dir=/usr/local/bin --filename=composer  # Install Composer
