--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - test
+  - deploy
 
 services:
   - name: mysql:8.0
@@ -9,7 +10,6 @@ services:
       MYSQL_DATABASE: "db_ci"
       MYSQL_USER: "username_ci"
       MYSQL_PASSWORD: "password_ci"
-
 
 test:
   stage: test
@@ -29,3 +29,17 @@ test:
     - php artisan test
   after_script:
     - rm .env  # Remove .env file after the tests
+  allow_failure: false # Fail the pipeline if tests fail
+
+deploy:
+  stage: deploy
+  image: alpine:latest
+  before_script:
+    - apk add --no-cache openssh-client  # Install SSH client
+  script:
+    - echo "Deploying to server via SSH"
+    - sshpass -p "$SSH_PASSWORD" ssh $SSH_USER@$SSH_HOST 'bash -s' < test_script.sh
+  only:
+    - master
+
+
